--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,4 @@
 body {
-    width: 100%;
     margin: 0;
     padding: 0;
 
@@ -40,7 +39,8 @@ input[type="radio"].visually-hidden {
 
 .conteiner {
     max-width: 1160px;
-    margin: auto;
+    margin: 0 auto;
+    padding: 0 10px;
 }
 
 /* ================== Navigation ================== */
