--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,6 @@ input[type="radio"].visually-hidden {
 .conteiner {
     max-width: 1160px;
     margin: 0 auto;
-    padding: 0 10px;
 }
 
 /* ================== Navigation ================== */
@@ -334,97 +333,6 @@ input[type="radio"].visually-hidden {
     border: 2px solid #c1c1c1;
     border-radius: 50%;
   }
-
-  /*
-.slider .conteiner {
-    position: relative;
-
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 80px;
-}
-
-.slider-control::before {
-    content: "";
-    position: absolute;
-
-    width: 18px;
-    height: 18px;
-
-    background-color: #ffffff;
-    border-radius: 50%;
-
-    cursor: pointer;
-    z-index: 1;
-}
-
-.slider-control .btn-1::before {
-    bottom: 95px;
-    left: 537px;
-}
-
-.slider-control .btn-2::before {
-    bottom: 95px;
-    left: 571px;
-}
-
-.slider-control .btn-3::before {
-    bottom: 95px;
-    left: 605px;
-}
-
-#btn-1:checked ~ .slider-control .btn-1::before,
-#btn-2:checked ~ .slider-control .btn-2::before,
-#btn-3:checked ~ .slider-control .btn-3::before {
-    content: "";
-    position: absolute;
-
-    width: 18px;
-    height: 18px;
-
-    background-color: #ffffff;
-    border-radius: 50%;
-
-    cursor: pointer;
-}
-
-#btn-1:checked ~ .slider-control .btn-1::after,
-#btn-2:checked ~ .slider-control .btn-2::after,
-#btn-3:checked ~ .slider-control .btn-3::after {
-    content: "";
-    position: absolute;
-
-    width: 4px;
-    height: 4px;
-
-    border: 2px solid #c1c1c1;
-    border-radius: 50%;
-
-    cursor: pointer;
-    z-index: 1;
-}
-
-#btn-1:checked ~ .slider-control .btn-1::after {
-    bottom: 100px;
-    left: 542px;
-}
-
-#btn-2:checked ~ .slider-control .btn-2::after {
-    bottom: 100px;
-    left: 576px;
-}
-
-#btn-3:checked ~ .slider-control .btn-3::after {
-    bottom: 100px;
-    left: 610px;
-}
-
-#btn-1:checked ~ .slider-wrapper-offer {
-    transform: translate(0);
-}
-
-*/
-
 
 
 /* ================== features ================== */
@@ -738,7 +646,7 @@ input[type="radio"].visually-hidden {
     position: relative;
 
     display: flex;
-    flex-wrap: wrap;
+    
     justify-content: space-between;
     align-items: center;
 
@@ -758,6 +666,10 @@ input[type="radio"].visually-hidden {
     text-align: center;
 
     opacity: 0.2;
+}
+
+.partners-item li:last-child a {
+    width: 173px;
 }
 
 .partners-item::after {
@@ -807,17 +719,7 @@ input[type="radio"].visually-hidden {
     background-color: #ffffff;
 }
 
-.contacts-adress::after {
-    content: "";
-    position: absolute;
-    top: 24px;
-    left: 524px;
 
-    width: 231px;
-    height: 190px;
-
-    background-image: url(..//img/map-marker.png);
-}
 
 .contacts-adress h3 {
     margin-bottom: 25px;
